# CrossFin-AI

./: README.md
ai-core-backend/: .gitignore  pyproject.toml
ai-core-backend/src/: app.py  server.py  utils.py
blockchain-backend/: Cargo.toml
blockchain-core-backend/: .gitignore  package-lock.json  package.json
crossfin-ui/: package-lock.json  package.json
crossfin-ui/src/app/: client.ts  layout.tsx
front-end/: package-lock.json  package.json
