[project]
name = "ai-core-backend"
version = "0.1.0"
description = "The core backend logic for the GenAI and Computer Vision Models"
authors = [
    {name = "Leroy Dickens",email = "36738999@mylife.unisa.ac.za"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
