[project]
name = "ai-core-backend"
version = "0.1.0"
description = "The core backend logic for the GenAI and Computer Vision Models"
authors = [
    {name = "Leroy Dickens",email = "36738999@mylife.unisa.ac.za"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.7,<5.0)",
    "mediapipe (>=0.10.21,<0.11.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "facenet-pytorch (>=2.6.0,<3.0.0)",
    "numpy (>=1.26,<2.0)",
    "qdrant-client (<1.14)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pillow (==10.2.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
